{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "bea66aa9-bc83-4e1d-8be7-c32c14cee078",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fdd52a90-1a4f-48bd-94d5-bb19496f83ca",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "703c6331-2b54-47d1-9828-0a1a48b88314",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8d710b7d-8f9d-437f-bfb9-59b0bf657a2e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "00953a30-d462-4dfe-b87a-6e5e270fec6c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraTilt",
                    "type": "Value",
                    "id": "716be4ee-5775-4fc7-b70f-86bc8631920c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "538a9036-5bb9-4df2-a247-ca21b248c676",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "Mouse/Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdcc2124-0e67-4cdb-ac54-3a11c6234691",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Mouse/Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aa2aaf3-1568-4f12-8fdd-0361d385031f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse/Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce212164-b5f0-442b-b34d-993a6c2d2c65",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da77d23e-c027-443f-8d9b-c317c4acfeb2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse/Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ad8c365-6edc-4abc-8184-7ad2b78cd320",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse/Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a9369c1-aa7a-423e-9676-a953fdb79af4",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7d91fbd-0bd2-4135-b660-492180e62895",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse/Keyboard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edb1e8c7-9ddd-4d50-83e2-1a6b81a46695",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6cf6e45-595d-482b-a7d8-8fa31aaa3467",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.4)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7bc2a31-070a-4e97-932a-541b367c6bab",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d7cc65d-7572-4bee-b328-b67204068ef2",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7650770-d157-4901-9079-2e3a94f82d3e",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.4)",
                    "groups": ";Gamepad",
                    "action": "CameraTilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        },
        {
            "name": "Mouse/Keyboard",
            "bindingGroup": "Mouse/Keyboard",
            "devices": []
        }
    ]
}